--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "openweather-apis": "^4.0.0"
+    "openweather-apis": "^4.0.0",
+    "vue2-google-maps": "^0.10.6"
   }
 }
