--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,3 +18,8 @@ steps:
 - script: |
     npm install
   displayName: 'npm install and NO build'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathtoPublish: '*' 
+    artifactName: 'WeatherApp'
