--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,11 @@ steps:
 - script: |
     npm install
   displayName: 'npm install and NO build'
+- task: CopyFiles@2
+  inputs:
+    targetFolder: $(Build.ArtifactStagingDirectory)
 
 - task: PublishBuildArtifacts@1
   inputs:
-    pathtoPublish: '*' 
+    pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     artifactName: 'WeatherApp'
